Add endpoint for getting a single harvest plan
